--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mon super site à moi rien qu'à moi</title>
-  </head>
+<html>
+<head>
+	<title>22-23 AN1 clipWeb</title>
+	<link rel="stylesheet" type="text/css" href="./src/styles/style.css">
+	
+</head>
 <body>
-  <ul>
-    <li>
-      <a href="carteNoel">joyeux noel</a>
-    </li>
-    
-  </ul>
-</body>
+	<ul id="studentList" class="open">
+		<li>Clip Web</li>
+	</ul>
 
+	<iframe></iframe>
+	<script type="text/javascript" src="./src/scripts/index.js"></script>
+</body>
 </html>
